[package]
name = "pfvz"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "multi_threaded",     # Run with multithreading
    "bevy_asset",         # Assets management
    "bevy_audio",         # Builtin audio
    "bevy_scene",         # Scenes management
    "bevy_winit",         # Window management (cross-platform Winit backend)
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_gizmos",        # Support drawing debug lines and shapes
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_state",         # Enable built in global state machines
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit
    "animation",          # Animation support
    "png",                # PNG image format for simple 2D images
    # Optionally disable these when release
    "file_watcher", # Asset hot-reloading
    "wayland",
] }
bevy_framepace = "0.17.1"
bevy_kira_audio = { version = "0.20.0", features = ["settings_loader"] }
lazy_static = "1.5.0"
ordered-float = "4.2.1"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
smallvec = "1.13.2"
toml = "0.8.14"
