[package]
name = "pfvz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bevy = { version = "0.14.1", default-features = false, features = [
    "multi_threaded",     # Run with multithreading
    "bevy_asset",         # Assets management
    "bevy_audio",         # Builtin audio
    "bevy_scene",         # Scenes management
    "bevy_winit",         # Window management (cross-platform Winit backend)
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_gizmos",        # Support drawing debug lines and shapes
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_state",         # Enable built in global state machines
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit
    "animation",          # Animation support
    "png",                # PNG image format for simple 2D images
    # Optionally disable these when release
    "wayland",
] }
bevy_egui = "0.29.0"
bevy_framepace = "0.17.1"
bevy_kira_audio = { version = "0.20.0", features = ["settings_loader"] }
bitflags = "2.6.0"
lazy_static = "1.5.0"
ordered-float = "4.2.2"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
smallvec = "1.13.2"
toml = "0.8.19"
